[package]
name = "reasoning-pricer"
version = "0.1.0"
edition = "2021"
description = "Token Valuation Analysis"
authors = ["WaifuAI"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
